# phoenix-core

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  Dockerfile  PROJECT_CHARTER.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  TASK_010_REPORT.md  TASK_011_REPORT.md  TASK_012_REPORT.md  TASK_013_REPORT.md  TASK_014_REPORT.md  TASK_015_REPORT.md  TASK_016_1_REPORT.md  TASK_016_CHECKLIST.md  TERMUX_STABILITY.md  docker-compose.yml  patch_bot.py  patch_crypto001.py  phoenix.db  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  container-security.yml  dependency-review.yml  fuzz.yml  gitleaks.yml  release-signing.yml  sbom.yml  slsa.yml
docs/: branch-protection.md  cryptography-policy.md  fuzz-testing.md  incident-response.md  release-signing.md  sbom.md  secrets-management.md  secrets-scanning.md  secure-development-lifecycle.md  security-architecture.md  security.md  slsa.md  threat-model.md
phoenix_core/: __init__.py  __main__.py  _version.py  cli.py
phoenix_core/ai/: __init__.py  base.py  deepseek_provider.py  groq_provider.py  router.py
phoenix_core/config/: __init__.py  settings.py
phoenix_core/config/phoenix_core/config/: settings
phoenix_core/core/: application.py  container.py
phoenix_core/github/: __init__.py  client.py
phoenix_core/guard/: __init__.py  cost_guard.py  guard.py  rate_limiter.py  retry.py  sanitizer.py
phoenix_core/memory/: __init__.py  context_builder.py  manager.py  models.py
phoenix_core/memory/storage/: __init__.py  base.py  sqlite_store.py
phoenix_core/plugins/: __init__.py  registry.py
phoenix_core/services/: __init__.py
phoenix_core/services/crypto/: __init__.py  base.py  cache.py  coingecko_provider.py  intent.py
phoenix_core/telegram/: __init__.py  bot.py  commands.py  context.py  dispatcher.py
phoenix_core/utils/: __init__.py  exceptions.py  health.py  logger.py  secrets.py
scripts/: validate_task016.sh
tests/fuzz/: config_fuzzer.py  input_fuzzer.py  secrets_fuzzer.py
tests/unit/: __init__.py  conftest.py  test_ai_base.py  test_ai_guard.py  test_ai_router.py  test_command_dispatcher.py  test_config.py  test_context_builder.py  test_conversation_manager.py  test_cost_guard.py  test_crypto_cache.py  test_crypto_intent.py  test_crypto_provider.py  test_deepseek_provider.py  test_github_client.py  test_groq_provider.py  test_output_sanitizer.py  test_rate_limiter.py  test_retry_policy.py  test_sqlite_conversation_store.py  test_task012_integration.py  test_task013_e2e.py  test_telegram_bot.py  test_telegram_commands.py  test_telegram_crypto_command.py  test_telegram_message_chunking.py
